@startuml Diagramme_Classe_Module_Com

' ============================================================
'  DIAGRAMME DE CLASSE : MODULE COMMUNICATION & AUDIT
' ============================================================

scale 1.0
hide empty members

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 11

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #8E44AD
  BorderThickness 1.5
  HeaderBackgroundColor #EBDEF0
  FontColor #2C3E50
  FontSize 12
  AttributeFontSize 10
  StereotypeFontSize 9
  StereotypeFontColor #7F8C8D
  ArrowColor #8E44AD
}

skinparam arrow {
  Color #8E44AD
  FontColor #7D3C98
  FontSize 10
  Thickness 1.5
}

class Notification {
  - id : Integer <<PK>>
  - utilisateur_id : Integer <<FK>>
  - titre : String(255)
  - message : Text
  - type : Enum {CANDIDATURE_NOUVELLE, CANDIDATURE_ACCEPTEE, CANDIDATURE_REFUSEE, ABSENCE, EVALUATION, DOCUMENT, CONVENTION, PRESENCE, SYSTEM}
  - lien : String(255)
  - lue : Boolean
  - date_lecture : DateTime
  - donnees_extra : JSON
  - created_at : DateTime
}

class Message {
  - id : Integer <<PK>>
  - expediteur_id : Integer <<FK>>
  - destinataire_id : Integer <<FK>>
  - stage_id : Integer <<FK>>
  - sujet : String(255)
  - contenu : Text
  - lu : Boolean
  - date_lecture : DateTime
  - piece_jointe_nom : String(255)
  - piece_jointe_chemin : String(255)
  - piece_jointe_taille : Integer
  - created_at : DateTime
}

class AuditLog {
  - id : Integer <<PK>>
  - user_id : Integer <<FK>>
  - action : String(100)
  - ip_address : String(45)
  - user_agent : String(500)
  - details : JSON
  - resource_type : String(50)
  - resource_id : Integer
  - created_at : DateTime
  __
  + {static} log(data) : AuditLog
  + {static} getUserLogs(userId) : List
  + {static} getByAction(action) : List
}

class Utilisateur {
  - id : Integer <<PK>>
  - nom : String
  - prenom : String
}

class Stagiaire {
  - id : Integer <<PK>>
}

' Relations
Notification "0..*" -- "1" Utilisateur : destinée à >
Message "0..*" -- "1" Utilisateur : envoyé par (expéditeur) >
Message "0..*" -- "1" Utilisateur : reçu par (destinataire) >
Message "0..*" -- "0..1" Stagiaire : concerne (stage) >
AuditLog "0..*" -- "0..1" Utilisateur : consigne actions de >

@enduml
